tests/ui/const-generics/const-generic-function.stderr
error: expected type, found `1`
  --> $DIR/const-generic-function.rs:17:19
   |
LL |     foo::<bar(bar(1, 1), bar(1, 1))>();
   |                   ^ expected type
   |
help: expressions must be enclosed in braces to be used as const generic arguments
   |
LL |     foo::<{ bar(bar(1, 1), bar(1, 1)) }>();
   |           +                           +

error: expected type, found `1`
  --> $DIR/const-generic-function.rs:18:15
   |
LL |     foo::<bar(1, 1)>();
   |               ^ expected type
   |
help: expressions must be enclosed in braces to be used as const generic arguments
   |
LL |     foo::<{ bar(1, 1) }>();
   |           +           +

error: expected type, found `2`
  --> $DIR/const-generic-function.rs:19:20
   |
LL |     foo::<bar(FOO, 2)>();
   |                    ^ expected type
   |
help: expressions must be enclosed in braces to be used as const generic arguments
   |
LL |     foo::<{ bar(FOO, 2) }>();
   |           +             +

error[E0573]: expected type, found function `baz`
  --> $DIR/const-generic-function.rs:16:11
   |
LL |     foo::<baz()>();
   |           ^^^^^ not a type

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0573`.
